LPM-862 финальные правки

--- a/src/style/bootstrap/breadcrumb.scss
+++ b/src/style/bootstrap/breadcrumb.scss
@@ -7,6 +7,7 @@
     &>li {
         display: inline-block;
         text-shadow: 0 1px 0 #ffffff;
+        margin:0;
     }
     &>.active {
         color: #999999;
