--- a/src/style/bootstrap/step.scss
+++ b/src/style/bootstrap/step.scss
@@ -12,15 +12,18 @@
             &.current {
 
                 .pearl-wrap {
+                    border-color:$color-primary;
+                    background:$color-primary;
                     .pearl-number {
                         color: $color-primary;
                         background-color: #FFF;
                         border-color: $color-primary;
-                        @include transform(scale(1.3));
+                        @include transform(scale(1.1));
                     }
                     &:after,
                     &:before {
                         background-color: $color-primary;
+                        border-color: $color-primary;
 
                     }
                 }
@@ -28,6 +31,8 @@
             &.done {
 
                 .pearl-wrap {
+                    border-color:$color-primary;
+                    background:$color-primary;
                     .pearl-number {
                         color: #FFF;
                         background-color: $color-primary;
@@ -36,6 +41,7 @@
                     &:after,
                     &:before {
                         background-color: $color-primary;
+                        border-color: $color-primary;
 
                     }
                 }
@@ -43,42 +49,46 @@
             .pearl-wrap {
                 width: 34px;
                 height: 34px;
-                background: #CCC;
+                background: #e7eef1;
                 border-radius: 50%;
                 display: inline-block;
                 padding: 4px 0;
                 position: relative;
-                border: 1px solid #444;
+                border: 1px solid #d1d9e3;
                 &:after {
-                    right: -16px;
+                    right: -24px;
                     position: absolute;
                     top: 12px;
                     z-index: 0;
-                    width: 50%;
+                    width: 75%;
                     height: 7px;
                     content: "";
-                    background-color: #E4E4E4;
+                    background-color: #e7eef1;
+                    border-top:1px solid #d1d9e3;
+                    border-bottom:1px solid #d1d9e3;
 
                 }
                 &:before {
-                    left: -16px;
+                    left: -24px;
                     position: absolute;
                     top: 12px;
                     z-index: 0;
-                    width: 50%;
+                    width: 80%;
                     height: 7px;
                     content: "";
-                    background-color: #E4E4E4;
+                    background-color: #e7eef1;
+                    border-top:1px solid #d1d9e3;
+                    border-bottom:1px solid #d1d9e3;
 
                 }
                 .pearl-number {
                     position: relative;
                     z-index: 1;
                     display: inline-block;
-                    color: #FFF;
+                    color: $color-text;
                     text-align: center;
-                    background: #DCDCDC;
-                    border: 2px solid #DCDCDC;
+                    background: #FFF;
+                    border: 1px solid #d1d9e3;
                     border-radius: 50%;
                     width: 24px;
                     height: 24px;
