--- a/src/style/bootstrap/tabs.scss
+++ b/src/style/bootstrap/tabs.scss
@@ -1,13 +1,14 @@
 
 .nav {
     margin-bottom: 0;
-    padding-left: 0;
+    //padding-left: 0;
     list-style: none;
     @include clearfix;
 
     > li {
         position: relative;
-        display: block;
+        //display: block;
+        margin-left:0;
 
         > a {
             position: relative;
@@ -42,14 +43,21 @@
     > li {
         float: left;
         margin-bottom: -1px;
+        margin-left:10px;
+        &:first-of-type{
+            margin-left:0;
+        }
 
         > a {
             margin-right: 2px;
             line-height: $base-line-height;
             border: 1px solid transparent;
+            background: #e1e4e4;;
+            opacity:.9;
             @include border-top-radius(4px);
             &:hover {
-
+                background: #d4d7d8;
+                opacity:1;
             }
         }
 
@@ -57,8 +65,9 @@
             &,
             &:hover,
             &:focus {
-                color: #FFF;
-                background-color: $color-primary;
+                color: $color-text;
+                background-color: #FFF;
+                border-color:$color-default;
                 border-bottom-color: transparent;
                 cursor: default;
             }
@@ -68,7 +77,7 @@
 
 .nav-tabs-line {
     > li {
-
+        margin-left:0;
         > a {
             margin-right: 0;
             border-bottom: 2px solid transparent;
