--- a/src/style/bootstrap/_bootstrap.scss
+++ b/src/style/bootstrap/_bootstrap.scss
@@ -3,6 +3,8 @@
 @import "color";
 @import "animation";
 @import "grid";
+@import "font-circle";
+
 
 @import "typography";
 @import "main";
@@ -24,5 +26,6 @@
 @import "push-notify";
 @import "collapse";
 @import "step";
+@import "utilities";
 @import "utilities";
 @import "breadcrumb";
