--- a/src/style/bootstrap/alert.scss
+++ b/src/style/bootstrap/alert.scss
@@ -5,9 +5,9 @@
     border-radius: 3px;
     padding-right: 20px;
     padding-left: 20px;
-    color: $color-warning;
-    background-color: rgba(255,243,230,.8);
-    border-color: #fff3e6;
+    color: #ce8f4b;
+    background-color: rgba(255, 246, 226, 0.8);
+    border-color: #f9dec1;
 }
 .alert-primary{
     color: $color-primary;
@@ -27,7 +27,7 @@
 .alert-danger {
     color: $color-danger;
     background-color: rgba(255,234,234,.8);
-    border-color: #ffeaea;
+    border-color: #ffc4c4;
 }
 .alert-warning {
     color: $color-warning;
