--- a/src/style/bootstrap/button.scss
+++ b/src/style/bootstrap/button.scss
@@ -15,7 +15,7 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
     color: #FFF;
     text-align: center;
     border: 0;
-    @include border-radius(1000px);
+    @include border-radius($base-border-radius);
     cursor: pointer;
     display: inline-block;
     outline: none;
@@ -31,7 +31,7 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
     //    @include box-shadow($btn-base-box-shadow);
     font-size: $font-m;
     height: $base-button-height;
-    line-height: $base-button-height * 0.95;
+    line-height: $base-button-height ;
     padding: 0 $base-button-padding;
     text-align: center;
     vertical-align: middle;
@@ -101,7 +101,7 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
 }
 
 .btn-icon {
-    padding: 8px;
+    padding: 10px;
     line-height: $base-line-height;
     i.fa {
         padding: 0;
@@ -374,7 +374,7 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
 }
 
 .btn-round {
-    @include border-radius($btn-round-radius);
+    //@include border-radius($btn-round-radius);
 }
 
 .btn-group {
