--- a/src/style/bootstrap/font-circle.scss
+++ b/src/style/bootstrap/font-circle.scss
@@ -12,12 +12,12 @@
 
 @font-face {
     font-family: CirceWebRegular;
-    src: url(circle-regular.eot);
-    src: url(circle-regular.eot) format("embedded-opentype"),
-    url(circle-regular.woff2) format("woff2"),
-    url(circle-regular.woff) format("woff"),
-    url(circle-regular.ttf) format("truetype"),
-    url(circle-regular.svg) format("svg");
+    src: url(../../../../../web/fonts/circle/circle-regular.eot);
+    src: url(../../../../../web/fonts/circle/circle-regular.eot) format("embedded-opentype"),
+    url(../../../../../web/fonts/circle/circle-regular.woff2) format("woff2"),
+    url(../../../../../web/fonts/circle/circle-regular.woff) format("woff"),
+    url(../../../../../web/fonts/circle/circle-regular.ttf) format("truetype"),
+    url(../../../../../web/fonts/circle/circle-regular.svg) format("svg");
     font-weight: 400;
     font-style: normal
 }
