--- a/src/style/bootstrap/step.scss
+++ b/src/style/bootstrap/step.scss
@@ -32,7 +32,7 @@
 
                 .pearl-wrap {
                     border-color: $color-success;
-                    background: #CECECE;
+                    //background: #CECECE;
                     .pearl-number {
                         color: #FFF;
                         background-color: $color-success;
