--- a/src/style/bootstrap/table.scss
+++ b/src/style/bootstrap/table.scss
@@ -67,7 +67,7 @@ table {
     padding: 8px;
     line-height: 1.57142857;
     vertical-align: top;
-    border-top: 1px solid #E4EAEC;
+    border-top: 1px solid $color-default;
 }
 
 table.general > tr > td:first-child,
