--- a/src/style/bootstrap/typography.scss
+++ b/src/style/bootstrap/typography.scss
@@ -117,7 +117,7 @@ a {
 
 .ui_required {
     color: $color-danger;
-    font-size: 14px;
+    font-size: $font-l;
     line-height: 1px;
     cursor: help;
 }
