--- a/src/style/bootstrap/button.scss
+++ b/src/style/bootstrap/button.scss
@@ -24,16 +24,14 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
     @include no-select;
     white-space: nowrap;
     text-decoration: none !important;
-    min-width: 40px;
+    min-width: 4 * $step;
     font-family: $base-font-family;
     position: relative;
     text-shadow: 0 1px rgba(0, 0, 0, .1);
-    //    @include box-shadow($btn-base-box-shadow);
     font-size: $font-m;
     height: $base-button-height;
     line-height: $base-button-height ;
     padding: 0 $base-button-padding;
-    text-align: center;
     vertical-align: middle;
 
     &:hover {
@@ -41,7 +39,6 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
     }
 
     &:active {
-        //        top: 1px;
         box-shadow: inset 0 3px 8px rgba(31, 45, 61, 0.3);
     }
 }
@@ -101,7 +98,7 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
 }
 
 .btn-icon {
-    padding: 10px;
+    padding: $step;
     line-height: $base-line-height;
     i.fa {
         padding: 0;
@@ -413,7 +410,8 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     }
 }
 
-.btn-upload-form > input[type=file], .btn-upload-form > input.upl_file {
+.btn-upload-form > input[type=file],
+.btn-upload-form > input.upl_file {
     position: absolute;
     right: 0;
     top: 0;
