--- a/src/style/bootstrap/collapse.scss
+++ b/src/style/bootstrap/collapse.scss
@@ -2,10 +2,7 @@
     position: relative;
     height: 0;
     overflow: hidden;
-    -webkit-transition: height 0.35s ease;
-    -moz-transition: height 0.35s ease;
-    -o-transition: height 0.35s ease;
-    transition: height 0.35s ease;
+    @include transition(height 0.35s ease);
     &.in {
         height: auto;
     }
