--- a/src/style/bootstrap/message.scss
+++ b/src/style/bootstrap/message.scss
@@ -11,12 +11,8 @@
     color: #FFF;
     cursor: pointer;
     background: rgba(0, 0, 0, 0.75);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    -webkit-box-shadow: 0 2px 15px #888;
-    -moz-box-shadow: 0 2px 15px #888;
-    box-shadow: 0 2px 15px #888;
+    @include border-radius($base-border-radius);
+    @include box-shadow(0 2px 15px #888);
     padding: 15px 15px;
     text-shadow: 0 1px 0 #262626;
     line-height: 160%;
