--- a/src/style/bootstrap/modal.scss
+++ b/src/style/bootstrap/modal.scss
@@ -150,10 +150,7 @@ html.wind_opened {
 
 .fade {
     opacity: 0;
-    -webkit-transition: opacity 0.15s linear;
-    -moz-transition: opacity 0.15s linear;
-    -o-transition: opacity 0.15s linear;
-    transition: opacity 0.15s linear;
+    @include transition (opacity 0.15s linear);
     &.in {
         opacity: 1;
 
@@ -168,12 +165,8 @@ html.wind_opened {
     width: 700px;
     margin-left: -350px;
     background-color: #FFF;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    @include border-radius ($base-border-radius);
+    @include box-shadow (0 3px 7px rgba(0, 0, 0, 0.3));
     -webkit-background-clip: padding-box;
     -moz-background-clip: padding-box;
     background-clip: padding-box;
@@ -183,10 +176,7 @@ html.wind_opened {
         margin-left: -450px;
     }
     &.fade {
-        -webkit-transition: opacity .3s linear, top .3s ease-out;
-        -moz-transition: opacity .3s linear, top .3s ease-out;
-        -o-transition: opacity .3s linear, top .3s ease-out;
-        transition: opacity .3s linear, top .3s ease-out;
+        @include transition (opacity .3s linear, top .3s ease-out);
         top: -25%;
         &.in {
             top: 10%;
