--- a/src/style/bootstrap/grid.scss
+++ b/src/style/bootstrap/grid.scss
@@ -26,7 +26,7 @@
         border: none;
         background: transparent;
         box-shadow: none;
-        font-size: $font-m;
+        font-size: 15px;
         margin-left: 0;
         padding: 11px 20px;
         &.active {
