--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,107 +1,117 @@
-body {
-    background: #EEE;
-}
-
-h1 {
-    font-size: 40px;
-}
-
-.card {
-    width: 70px;
-    height: 70px;
-    color: #FFF;
-    text-align: center;
-    padding-top: 27px;
-    @include border-radius($base-border-radius);
-    display: inline-block;
-}
-
-.card-primary {
-    background: $color-primary;
-}
-
-.card-success {
-    background: $color-success;
-}
-
-.card-danger {
-    background: $color-danger;
-}
-
-.card-gray {
-    background: $color-default;
-}
-
-.card-dark-gray {
-    background: $color-title;
-}
-
-.card-warning {
-    background: $color-warning;
-}
-
-.card-info {
-    background: $color-info;
-}
-
-.card-light-gray {
-    background: $color-smoke;
-}
-
-.font-card {
-    padding: 2*$step;
-    border: 1px solid $color-gray;
-    border-bottom: none;
-    background: #FFF;
-}
-
-.font-card:first-child {
-    @include border-top-radius($base-border-radius);
-}
-
-.font-card:last-child {
-    @include border-bottom-radius($base-border-radius);
-    border-bottom: 1px solid $color-gray;
-}
-
-.tbl-btns {
-    border: 1px solid $color-gray;
-    @include border-radius($base-border-radius);
-    background: #FFF;
-}
-
-.tbl-btns .t-cell {
-    padding: 2*$step;
-}
-
-.tabs {
-    float: left;
-    width: 220px;
-    position: fixed;
-}
-
-.lib-section {
-    padding: 30px 20px;
-    background: #FFF;
-    border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.13), 0 1px 3px rgba(0, 0, 0, 0.13);
-}
-.show-grid .ex-col{
-    background:#e4eaec;
-    padding:10px 0;
-    text-align:center;
-}
-.example{
-    & .popover,
-    & .tooltip{
-        display:block;
-        position:relative;
-        opacity:1;
-        margin:0;
-    }
-    & .dropdown-menu{
-
-        width:240px;
+.home {
+    body {
+        background: #EEE;
     }
 
+    h1 {
+        font-size: 40px;
+    }
+
+    .card {
+        width: 70px;
+        height: 70px;
+        color: #FFF;
+        text-align: center;
+        padding-top: 27px;
+        @include border-radius($base-border-radius);
+        display: inline-block;
+    }
+
+    .card-primary {
+        background: $color-primary;
+    }
+
+    .card-success {
+        background: $color-success;
+    }
+
+    .card-danger {
+        background: $color-danger;
+    }
+
+    .card-gray {
+        background: $color-default;
+    }
+
+    .card-dark-gray {
+        background: $color-title;
+    }
+
+    .card-warning {
+        background: $color-warning;
+    }
+
+    .card-info {
+        background: $color-info;
+    }
+
+    .card-light-gray {
+        background: $color-smoke;
+    }
+
+    .font-card {
+        padding: 2*$step;
+        border: 1px solid $color-gray;
+        border-bottom: none;
+        background: #FFF;
+    }
+
+    .font-card:first-child {
+        @include border-top-radius($base-border-radius);
+    }
+
+    .font-card:last-child {
+        @include border-bottom-radius($base-border-radius);
+        border-bottom: 1px solid $color-gray;
+    }
+
+    .tbl-btns {
+        border: 1px solid $color-gray;
+        @include border-radius($base-border-radius);
+        background: #FFF;
+    }
+
+    .tbl-btns .t-cell {
+        padding: 2*$step;
+    }
+
+    .tabs {
+        float: left;
+        width: 220px;
+        position: fixed;
+    }
+
+    .lib-section {
+        padding: 30px 20px;
+        background: #FFF;
+        border-radius: 4px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.13), 0 1px 3px rgba(0, 0, 0, 0.13);
+    }
+    .show-grid .ex-col {
+        background: #E4EAEC;
+        padding: 10px 0;
+        text-align: center;
+    }
+    .example {
+        & .popover,
+        & .tooltip {
+            display: block;
+            position: relative;
+            opacity: 1;
+            margin: 0;
+        }
+        & .dropdown-menu {
+
+            width: 240px;
+        }
+
+    }
+    .code {
+        background: #E4EAEC;
+        font-size:$font-m;
+        padding:30px;
+        margin-top:30px;
+        border:1px solid #ccc;
+        border-radius:4px;
+    }
 }
